[package]
name = "telegram-bot-raw"
version = "0.5.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>"]

description = "A library for creating Telegram bots."

documentation = "https://lukaskalbertodt.github.io/telegram-bot/telegram_bot/"
repository = "https://github.com/LukasKalbertodt/telegram-bot"
readme = "README.md"

keywords = ["telegram", "bot", "chat", "api"]
license = "MIT"

[dependencies]
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
