[package]
name = "telegram-bot-tokio"
version = "0.5.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>"]

description = "A library for creating Telegram bots."

keywords = ["telegram", "bot", "chat", "api"]
license = "MIT"

[dependencies]
serde = "0.9.8"
tokio-core = "0.1.4"
url = "1.0"

telegram-bot-raw = { version = "=0.5.0", path = "../raw" }

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
rev = "359f5ff4d79c46e923c2d512247947eab3b9710d"
