[package]
name = "telegram-bot-tokio"
version = "0.5.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>"]

description = "A library for creating Telegram bots."

keywords = ["telegram", "bot", "chat", "api"]
license = "MIT"

[dependencies]
serde = "0.9.8"
tokio-core = "0.1"
url = "1.0"
error-chain = "0.10.0"
futures = "0.1"
serde_json = "0.9.8"

telegram-bot-raw = { version = "=0.5.0", path = "../raw" }

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"
rev = "359f5ff4d79c46e923c2d512247947eab3b9710d"

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls.git"
rev = "7425bd8d45ac90acab92591701ea5009f3248947"
