[package]
name = "telegram-bot-tokio"
version = "0.5.0"
authors = ["Lukas Kalbertodt <lukas.kalbertodt@gmail.com>", "Fedor Gogolev <knsd@knsd.net>"]

description = "A library for creating Telegram bots."

keywords = ["telegram", "bot", "chat", "api"]
license = "MIT"

[dependencies]
serde = "0.9.8"
tokio-core = "0.1"
url = "1.0"
error-chain = "0.10.0"
futures = "0.1"
serde_json = "0.9.8"

telegram-bot-raw = { version = "=0.5.0", path = "../raw" }

[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

[dependencies.hyper-tls]
git = "https://github.com/hyperium/hyper-tls.git"
